@@ -12,6 +12,7 @@ This version addresses the following issues:
 
 1010509 - specular exponent in material not initialized
 1010508 - EGL_Power on x86 buggy
+1010510 - specular color incorrect
 
 
 Version 0.81
